# rust-go

./: Cargo.toml
src/: board.rs  main.rs  player.rs
