[package]
name = "rust-go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
bevy = "0.9.1"
bevy_prototype_lyon = "0.7.2"

[profile.dev]
debug = true

# Enable a small amount of optimization in debug mode
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

